--- a/synthesize.html
+++ b/synthesize.html
@@ -170,7 +170,7 @@ Outputs produced by decision-support tools are not always in a format for immedi
 <img src="img/off_ramp.png"><br>
 Synthesizing outputs from decision-support tools can be challenging.  NatCap has created helper tools (or "off-ramps") that enable InVEST users to quickly explore outputs and perform basic post-processing.  The following are links to examples of InVEST helper tools: 
 <ol>
-<li><a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank"><b>InVIEW</b></a> is a web app that automates common synthesis and visualization tasks that may be necessary after running InVEST. InVIEW displays the results of your latest model run in a web browser.  The tool allows InVEST users to easily explore and extract meaning from raw outputs without requiring a desktop GIS.  With InVIEW, users can:
+<li><b>InVIEW</b></a> is a web app that automates common synthesis and visualization tasks that may be necessary after running InVEST. The app displays results of your latest model run in a web browser and allows users to easily explore and extract meaning from raw outputs without requiring a desktop GIS.  Try it now with InVEST <a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank">Coastal Vulnerability</a> or <a href="http://vulpes.sefs.uw.edu/ttapp/rec-dash.php" target="_blank">Recreation</a> model results.  With InVIEW, users can:
 <br>&#8226; &nbsp;View InVEST outputs on a fully interactive, Google Earth-style, map
 <br>&#8226; &nbsp;Explore spatial patterns (e.g., ecosystem service hotspots)
 <br>&#8226; &nbsp;Compare scenarios and highlight changes over time
