--- a/data.html
+++ b/data.html
@@ -203,9 +203,9 @@ Hover over each marker to learn more about these regional MSP databases.  Click 
 Processing spatial and tabular data is a challenging but necessary step before it can be plugged into InVEST or other decision-support tools.  NatCap has created helper tools and documentation (or "on-ramps") to help InVEST users prepare and format inputs for analyzing ecosystem service outcomes:
 <ol>
 <li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank"><b>InVEST 3.x Data Requirements</b></a> - A sortable spreadsheet listing the required and optional inputs for each InVEST model</li>
-<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
+<li><a href="http://data.naturalcapitalproject.org/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
 <li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
-<li><a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> - A discussion thread where NatCap staff and members of the broader community share details about new helper tools</li>
+<li><a href="http://forums.naturalcapitalproject.org/index.php?p=/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> - A discussion thread where NatCap staff and members of the broader community share details about new helper tools</li>
 </ol>
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
