--- a/synthesize.html
+++ b/synthesize.html
@@ -175,10 +175,10 @@ Synthesizing outputs from decision-support tools can be challenging.  NatCap has
 <br>&#8226; &nbsp;Explore spatial patterns (e.g., ecosystem service hotspots)
 <br>&#8226; &nbsp;Compare scenarios and highlight changes over time
 <br>&#8226; &nbsp;Quickly diagnose issues and refine InVEST model inputs</li>
-<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes an "Interpreting Results" section that defines intermediate and final outputs of each model</li>
+<li><a href="http://data.naturalcapitalproject.org/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes an "Interpreting Results" section that defines intermediate and final outputs of each model</li>
 <li><a href="http://tinyurl.com/cctd-belize" target="_blank"><b>Identifying Opportunities for Climate-Compatible Tourism Development in Belize</b></a><br>This online analytics tool enables users to summarize results from the <a href="http://www.naturalcapitalproject.org/models/coastal_vulnerability.html" target="_blank">InVEST coastal vulnerability model</a> through a simple website. Model outputs are linked to 2010 population census and tourism expenditure data and then visualized as maps and graphs.</li> 
 <li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
-<li>Visit our <a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> discussion thread for synthesis helper tools that are currently under development</li>
+<li>Visit our <a href="http://forums.naturalcapitalproject.org/index.php?p=/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> discussion thread for synthesis helper tools that are currently under development</li>
 </ol>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
