completed edits to analyze.html

--- a/analyze.html
+++ b/analyze.html
@@ -139,7 +139,9 @@ window.onload = function (evt) {
 <body>
 <h1>Step 4: Analyze (Assess Outcomes)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-The "Analyze" step involves assessing ecosystem service outcomes by modeling how change in ecosystems and socio-economic conditions under alternative future scenarios leads to change in environmental benefits and values for people. Results can be spatially explicit and, when possible, should be directly tied to local beneficiaries (i.e., demand for those benefits) and reported using metrics that will resonate with stakeholders and policy-makers.
+The Analyze Step uses <a href="data.html">information</a> to assess whether outcomes of environmental changes or management actions proposed during the <b>Scenario</b> Step meet planning goals outlined during <b>Scoping</b>.  Analyses quantify how changes in  ecosystems and socio-economic conditions under alternative future scenarios lead to spatially explicit changes in environmental condition, ecological function, and benefits to people.  Analyses should create outputs such as maps or summary tables of metrics that allow you to adequately explore the benefits of management options, consequences of climate and other global change, and to identify synergies and tradeoffs between them (CITE WCA TECH PLANNING DOCUMENT, Cowling et al 2008, Carpenter et al 2012).
+
+A variety of “Decision Support Tools” (DSTs) exist to facilitate analyses for MSP (CITE COS REPORT).  The available Tools serve different purposes and can be used to meet specific planning goals.  As such, DSTs have unique data requirements and create different types of results.  For example, NatCap's Overlap Analysis tool allows you to visualize the number of human activities in a space (link to example image in Gallery).  <b>Marxan with Zones</b> uses a quasi-optimization approach to highlight areas of greatest value for achieving multiple biodiversity and other objectives in a spatial zoning context (need citation).  Regardless of whether a DST is used, analyses should produce results that are of interest to stakeholders participating in the MSP process and the local beneficiaries who will be affected negatively or positively by policy decisions (Honey-Roses and Pendleton 2013, Ruckelshaus et al 2013 ).
 <p></p>
 <img src="img/approach_Step4.png" usemap="#step4"><br>
 <map name="step4">
@@ -149,56 +151,61 @@ The "Analyze" step involves assessing ecosystem service outcomes by modeling how
   <area shape="circle" coords="631,93,55" href="synthesize.html" alt="Synthesize">
   <area shape="circle" coords="764,93,55" href="communicate.html" alt="Communicate">
 </map>
-<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
-<ul>
-<li>Produce early outputs such as maps or summary tables to characterize the current distribution of ecosystem services (ES)</li>
-<li>Using a stakeholder-driven process to compile data and develop scenarios, assess and compare future ES outcomes</li>
-</ul>
-<a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
-<ul>
-<li>Before applying any decison-support tool make sure to understand its underlying assumptions and limitations</li>
-<li>When deciding which tool(s) to use, examine existing use-cases where the tool has already been applied</li>
-<li>Explore our compilation of NatCap MSP use-cases (below) to find a tool that suits your project needs</li>
-</ul>
+
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;MSP Decision-Support Tools and Use-Cases</h2>
+<img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;MSP Decision-Support Tools</h2>
 Below we list some freely-available MSP analysis toolkits. Click on the tool's name to visit its website or click on the sub-bullet links to learn how the tool was applied as part of an MSP use-case.
 <p></p>
 <ol>
 <li><a href="http://www.ariesonline.org" target="_blank"><b>AIRES</b></a>
+  is a flexible, spatially explicit ecosystem service modeling framework that uses machine learning and reasoning to allow assembly of customized models, specialized for each application context.
 <br>&#8226; <a href="http://www.ariesonline.org/case_studies/madagascar.html" target="_blank">Madagascar</a> - ARIES marine ecosystem services models were developed for Madagascar to study coastal storm regulation and subsistence fisheries. Both of these services are critical in Madagascar due to its reliance on fisheries for protein and its susceptibility to tropical storms forming in the southwest Indian Ocean.
 <li><a href="http://atlantis.cmar.csiro.au" target="_blank"><b>Atlantis</b></a>
+  is an ecosystem model that can accommodate complex coupled human-natural systems, including food web and fleet dynamics.
 <br>&#8226; <a href="http://www.noaa.gov/iea/Assets/iea/documents/atlantis_ecosystem_model.pdf" target="_blank">Northern Gulf of California (Mexico)</a> - Atlantis was used to estimate the benefits of compliance with existing fisheries regulations in the Northern Gulf of California, including spatial management, seasonal closures, gear restrictions, removal of illegal fishing, buyouts and programs to encourage gear switching, and the combination of these regulations into ‘full enforcement’.
 <li><a href="http://maps.coastalresilience.org/network/" target="_blank"><b>Coastal Resilience</b></a>
+  is a global network of practitioners who are applying an approach and web-based mapping tool designed to help communities understand their vulnerability from coastal hazards, reduce their risk and determine the value of nature-based solutions.
 <br>&#8226; <a href="http://maps.coastalresilience.org/gulfmex/" target="_blank">Gulf of Mexico</a> - With its high incidence of storms and hurricanes and valuable ecological and economic resources, the Gulf region is a high-risk area with great potential to demonstrate natural risk reduction solutions. The Coastal Resilience approach and tools have been applied Gulf-wide and at specific sites, including those that help identify where to implement oyster reef restoration to meet social and ecological goals.
-<li><a href="http://www.nceas.ucsb.edu/globalmarine" target="_blank"><b>Cumulative Impacts</b></a>
+<li><a href="http://www.nceas.ucsb.edu/globalmarine" target="_blank"><b>Cumulative Impacts</b></a>ONE SENTENCE DESCRIPTION HERE (IS THIS REALLY THE NAME OF THE HALPERN ET AL APPROACH?  IT'S SO GENERIC--HARD TO CALL IT SIMPLY THIS, GIVEN ITS MANY MEANINGS BEYOND THIS ONE ANALYTICAL APPROACH CITE HALPERN ET AL. 2008 AT A MINIMUM)
 <br>&#8226; <a href="https://www.nceas.ucsb.edu/globalmarine/ca_current" target="_blank">California Current</a> - Researchers applied methods developed to map cumulative impacts globally to the California Current using more comprehensive and higher-quality data for 25 human activities and 19 marine ecosystems.
 </ul>
 <li><a href="marine_invest.html"><b>Marine InVEST</b></a>
+  ONE SENTENCE DESCRIPTION OF MARINE INVEST
+  LIST ALL INVEST MODELS HERE -- THEN SEPERATE OUT OTHERS AS SPENCER SAYS.
+  I THINK WE SHOULD SEPARATE THIS LIST INTO INVEST SERVICE MODELS VS OTHER INVEST TOOLS AND MODELS LIKE OA, HRA, CV.
 <br>&#8226; Two InVEST MSP use-cases are described at the <a href="#use-cases">bottom of this page</a>.
 <li><a href="http://www.afordablefutures.com/services/mimes" target="_blank"><b>MIMES</b></a>
+  is a suite of models that quantify the effects of land and sea use change on ecosystem services and at global, regional, and local levels using input data from GIS sources, time series, etc. to simulate ecosystem components at under different scenarios 
 <br>&#8226; <a href="http://www.eartheconomics.org/FileLibrary/file/Reports/Louisiana/Earth_Economics_Report_on_the_Mississippi_River_Delta_compressed.pdf" target="_blank">Mississippi Delta</a> - Wetlands, Hurricanes and the Economy: The Value of Restoring the Mississippi River Delta
 <li><a href="http://www.wri.org/our-work/project/coastal-capital-economic-valuation-coastal-ecosystems-caribbean/coastal-capital#project-tabs" target="_blank"><b>WRI’s Valuation Methods and Tools</b></a>
+  is an approach to conducting ecosystem valuation to inform decision making that involves three phases of a valuation effort (scoping, analysis and outreach), with an emphasis on stakeholder engagement in all phases.
 <br>&#8226; <a href="http://www.wri.org/our-work/project/coastal-capital-economic-valuation-coastal-ecosystems-caribbean" target="_blank">Caribbean</a> - WRI’s valuation methods and tools help policymakers, civil society or other interested parties to assess the value to their economies of goods and services provided by coral reefs and to aid in setting coastal management policies. WRI offers tools for tourism/recreation, fisheries, and MPAs.
 </ol>
 <p></p>
+<a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Before applying a Tool:</h2>
+<ul>
+<li>Make sure that the Tool's outputs and purpose meet your goals (DSTs are not required for MSP)</li>
+<li>Assess whether you can collect the necessary data and information to use the Tool; and whether you have the expertise to parameterize and run the models</li>
+<li>Understand underlying assumptions and limitations of the Tool</li>
+<li>Examine existing examples of how the Tool was used</li>
+</ul>
+
 <i>Do you know of other analysis tools that can help inform MSP?  <a href="mailto:gverutes@stanford.edu?Subject=MSP%20Tools" target="_top">E-mail us</a> the details!</i>
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: What guidance is available to help me choose from all the different decision-support tools for MSP?</b><br>
-<i>A: In 2012 the Center for Ocean Solutions and PacMARA released a <a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank"><b>Decision Guide: Selecting decision support tools for marine spatial planning</b></i></a>
+<i>A: In 2012 the Center for Ocean Solutions and PacMARA released a <a href="http://pacmara.org/tikiwiki/tiki-download_file.php?fileId=233" target="_blank"><b>Decision Guide: Selecting decision support tools for marine spatial planning</b></i></a>Decision-support tools are not needed for all stages or types of MSP .  Depending on the level of quantitative, spatial information desired to support an MSP process, early iterations or phases of MSP can often get underway with open discussions in which scientific information is included, without requiring DST application.
 <p></p>
 <b>Q: Which metrics are most effective for highlighting future change in the distribution and delivery of ecosystem services to people?</b><br>
-<i>A: It depends largely on what ecosystem service and function are under consideration.  Stakeholder engagement can elucidate the source(s) of environmental change, how these changes affect ecosystem function, and what ecological outputs will change.  Once these connections become clear, it can then be useful to talk about metrics like economic valuation.  This process of working from change, through function, and then to ecological outcomes to people is typically more important than any final measures of ecosystem services or value.</i>
+<i>A: It depends largely on what ecosystem service and function are under consideration. During Scoping stakeholders should elucidate the dependencies on ecosystems, potential sources of environmental change, how these changes affect ecosystem function, and thus how ecosystem services might change. Once these connections have been hypothesized, it can be useful to measure ecosystems and their services in biophysical and economic terms. This process of working from change, through function, and then to ecological outcomes for people is important.</i>
 <p></p>
 <b>Q: How exactly can InVEST models be used to facilitate the MSP process?</b><br>
 <i>A: Visit our <a href="marine_invest.html"><b>Marine InVEST page</b></a> to learn about the models -or- read through the NatCap use-case summaries at the bottom of this and subsequent pages to learn how different models in the InVEST toolkit were applied for MSP.</i>
 <p></p>
 <b>Q: If I have questions about using InVEST models or run into problems, where can I get help?</b><br>
-<i>A: First, check the <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST user’s guide</b></a> chapter that describes your particular model of interest.  Each chapter covers the theory behind the model as well as detailed information about data formatting requirements and how to interpret the results (model outputs).  Within InVEST, each model includes sample input data that offers a template for how input data should be formatted.  Also, the <a href="http://ncp-yamato.stanford.edu/natcapforums/" target="_blank"><b>NatCap User Help Forum</b></a> allows users to converse with other InVEST users and NatCap staff.</i>
+<i>A: First, check the <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST user’s guide</b></a> chapter that describes your particular model of interest.  Each chapter covers the theory behind the model as well as detailed information about data formatting requirements and how to interpret the results (model outputs).  Within InVEST, each model includes sample input data that offers a template for how input data should be formatted.  Also, the <a href="http://ncp-yamato.stanford.edu/natcapforums/" target="_blank"><b>NatCap User Help Forum</b></a> allows users to converse with other InVEST users and NatCap staff.  MENTION MOOC, ONLINE VIDS??</i>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -217,10 +224,10 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
 Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>California</h4>
-The <a href="marine_invest.html"><b>InVEST coastal vulnerability model</b></a> was used to identify where coastal ecosystems reduce the number of people exposed to storms and future sea level rise along the California coast.  These areas were further analyzed at the county level to highlight which habitats play the biggest role in reducing numbers of people at risk and thus where to prioritize conservation of these ecosystems.  This early information provided local agencies with a process to better determine how their coasts and oceans can be managed more sustainably.  Additional InVEST models are now being applied to map the full suite of benefits provided by coastal-marine ecosystems, including recreation opportunities, scenic quality and watershed services.
+The <a href="marine_invest.html"><b>InVEST coastal vulnerability model</b></a> was used to identify where coastal ecosystems reduce the number of people exposed to storms and future sea level rise along the California coast.  These areas were further analyzed at the county level to highlight which habitats play the biggest role in reducing numbers of people at risk and thus where to prioritize conservation of these ecosystems.  This early information provided local agencies with a process to better determine how their coasts and oceans can be managed more sustainably (Langridge et al. 2014 (MIGHT BE 2013)).  Additional InVEST models are now being applied to map the full suite of benefits provided by coastal-marine ecosystems, including recreation opportunities, scenic quality and watershed services.
 <p></p>
 <h4>Belize</h4>
-A risk assessment was conducted in coastal Belize to map impacts to habitats from eight coastal-marine human uses.  Based on the amount of "functional" habitat (healthy ecosystems that are capable of providing benefits to people), three <a href="marine_invest.html"><b>InVEST models</b></a> were applied to map, measure and value future ecosystem service delivery, including coastal protection, fisheries, and tourism / recreation.  Model results were used to illustrate where human activities pose the greatest risk to ecosystems and the resulting changes in ecosystem service values (both biophysical and economic).
+In coastal Belize, the question we were addressing in the Analyze step was “where should we site human activities to enhance ecosystem services and reduce the risk to habitats that provide these services?”  We used a classic risk assessment approach (see Arkema et al. 2014 for more details about the InVEST Habitat Risk Assessment model) to map cumulative risk to habitats from eight coastal-marine human uses.  To assess delivery of services in the current and several future management scenarios, we assumed a relationship between levels of risk to habitats and the amount of "functional" habitat (healthy ecosystems that are capable of providing benefits to people, Arkema et al. in review).  We used estimates of the area of functional habitat in each analysis unit and planning region as inputs into three <a href="marine_invest.html"><b>InVEST models</b></a> coastal protection, fisheries, and tourism services. Model results were used to illustrate where human activities pose the greatest risk to ecosystems and the resulting changes in ecosystem service values (both biophysical and economic). 
 <p></p>
 <ul id="folio_scroller">
 <li><span>Spatial representations of risk to three habitats were used to assess ecosystem service outcomes across the nine coastal planning regions of Belize</span><img alt="" src="img/analyze_bz_folio_1.png" /></a></li>
