a couple more edits to analyze.html

--- a/analyze.html
+++ b/analyze.html
@@ -181,6 +181,7 @@ Below we list some freely-available MSP analysis toolkits. Click on the tool's n
   is an approach to conducting ecosystem valuation to inform decision making that involves three phases of a valuation effort (scoping, analysis and outreach), with an emphasis on stakeholder engagement in all phases.
 <br>&#8226; <a href="http://www.wri.org/our-work/project/coastal-capital-economic-valuation-coastal-ecosystems-caribbean" target="_blank">Caribbean</a> - WRI’s valuation methods and tools help policymakers, civil society or other interested parties to assess the value to their economies of goods and services provided by coral reefs and to aid in setting coastal management policies. WRI offers tools for tourism/recreation, fisheries, and MPAs.
 </ol>
+I THINK THESE TOOLS ALSO NEED LINKS REFERENCES TO SCIENTIFIC PAPER WHEREVER POSSIBLE (THE NEW PLOS ONE PAPER FOR AIRES, GUERRY AND KIM FOR INVEST, ETC – SEE BELOW FOR SOME OF THE CITATIONS)
 <p></p>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Before applying a Tool:</h2>
