edits to communicate.html

--- a/communicate.html
+++ b/communicate.html
@@ -139,7 +139,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 6: Communicate (Inform Decisions)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Once ecosystem service outputs have been synthesized, it may be necessary to develop a communication strategy for disseminating results to your different target audiences.  ES information can be delivered in many ways, from peer-review papers to reports to diagrams and interactive maps.  For this information to be taken up, it should be represented in ways that resonate with the intended audience. We have found that the most effective communication occurs through co-production of knowledge and knowledge products by scientists, policy-makers and stakeholders through an applied process.  
+At this step in the process, the team has done significant work together and it is crucial to get the word out about it in ways that resonate with decision-makers and stakeholders. Careful targeting of particular audiences should drive the creation of products.  Opportunities to present results to decision-makers should be created, seized, and thoughtfully delivered (E.G. PRESENTATION ON METRICS TO THE WCA BOARD - ANYTHING TO CITE SPENCER?). If well-coordinated, reports detailing the results can be incorporated directly into planning documents (CITE BZ PLAN, IRWM PLAN FOR SANTA CRUZ).  In some instances, it is important to publish peer-reviewed papers to help establish the credibility of the science (CITE BZ PNAS AND HRA PAPERS; LANGRIDGE ET AL.) and thus gain the support and trust of internal science advisors and the broader scientific community.  Also, communication with stakeholders can be key: simple diagrams and interactive maps can allow non-technical users to explore and understand results (CITE BZ WEB PORTAL, NATURE CLIMATE CHANGE PAPER INTERACTIVE MAP).  Appropriate communication can lead to transparency, a shared understanding among diverse actors, and an increased likelihood of action.   
 <p></p>
 <img src="img/approach_Step6.png" usemap="#step6"><br>
 <map name="step6">
@@ -152,16 +152,20 @@ Once ecosystem service outputs have been synthesized, it may be necessary to dev
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
 <ul>
-<li>Create synthesis projects (e.g, report, executive summary, presentation, etc.) tailored to intended audience</li>
-<li>Build an online repository (e.g., mapping portal, data download) to archive and dissementate spatial data</li>
-<li>Organize a workshop to share final results and conclude the project</li>
+<li>Create syntheses of the results (e.g, reports, executive summaries, peer-reviewed papers, presentations, interactive maps, etc.) tailored to intended audiences</li>
+<li>Share findings—and the ways in which they can inform planning and action—with the broader community</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Use appropriate mediums to communicate findings to different audiences (e.g., technical report for scientists vs. executive summary for government officials)</li>
-<li>Boiling everything down to a number does not always make a policy better or the discussion more scientific</li>
-<li>Be honest about the science and underlying uncertainty, particularly when not everything can be reduced to a single currency</li>
+<li>Use appropriate media to communicate findings to different audiences (e.g., technical report for scientists vs. executive summary for government officials).</li>
+<li>Communication is two-way; be a good listener and develop products that meet the needs of your audience.</li>
+<li>Don’t use jargon (including, in most instances, the phrase “ecosystem services”.  Use the terms that make sense to your stakeholders and decision-makers.</li>
+<li>Tell stories.  Human brains are wired to look for and remember a narrative.  Find the stories and tell them well.</li>
+<li>A central challenge here is that we are working to make implicit connections explicit. Don’t leave people with the message that “it is complicated”. Rather, leave them with the message that “we can make better decisions if we think this through differently”</li>
+<li>Be honest about the science and underlying uncertainty (A GOOD REF FOR CITING UNCERTAINTY?).</li>
+<li>Consider building an online repository (e.g., mapping portal, data download) to archive and dissementate spatial data.</li>
+<li>Organizing a workshop to share results can be a good mechanism for feedback, drive the future evolution of the work (see “iteration”), and increase buy-in.</li>
 </ul>
 <a name="gallery"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/gallery_sm.png" align="left"><h2>&nbsp;&nbsp;Gallery</h2>
@@ -169,22 +173,26 @@ Visit our <a href="gallery.html"><b>Visualization Gallery</b></a> to explore exa
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: What kind of information do decision-makers want to hear?</b><br>
-<i>A: Explain what they are losing, how it will affect them, and what they are gaining from some development or management action. This means explaining how environmental or ecological change will affect them on both sides of the equation.</i><br>
+<b>Q: What kinds of information do decision-makers want to hear?</b><br>
+<i>A: Decision-making is exceedingly complex. People have to balance multiple objectives, and need to gain the support of their stakeholders. For the most part, they want information that they can readily connect to the decisions at-hand. Thus, it is essential to involve those you hope to influence in your process from the beginning, so that you know how to connect your results to their needs. When co-created, information is more likely to be legitimate, credible, and salient (CITE CASH AND MCKENZIE ET AL.).</i><br>
 <p></p>
 <b>Q: How should I present results?</b><br>
-<i>A: Results can be communicated using different mediums and formats.  Because the process of MSP relies on spatial information, maps are an obvious choice for communicating results, especially differences in space.  Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios.  Meeting presentations offer an opportunity to foster conversation, while written reports are often used to catalog the relevant literature, data sources, model methodology, and results.</i><br>
-<p></p>
-<b>Q: What comes next?</b><br>
-<i>A: After communicating with partners and stakeholders, you may revisit previous steps in the process.  This may include expanding the project’s objectives, improving data inputs, or modifying scenarios.  If your project is concluding, applying results through implementation or developing a monitoring protocol can serve as a lasting contribution to the local community.</i><br>
+<i>A: Because the process of MSP relies on spatial information, maps are an obvious choice for communicating results, especially spatial differences throughout a region. However, maps can be difficult to synthesize and to compare. Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios (see some examples in the <a href="gallery.html">gallery</a>).</i> SHOULD THIS QA MOVE TO THE SYTHESIZE PAGE?<br>
+
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
+  LETS ASK STACEY FOR SOME STORYTELLING REFERENCES…OVERALl, IT’D BE GOOD TO TALK TO GV ABOUT WHY HE CHOSE THESE PARTICULAR ONES.
 <li>Ehler, Charles. "Conclusions: benefits, lessons learned, and future challenges of marine spatial planning." <i>Marine Policy</i> 32.5 (2008): 840-843. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X08000730" target="_blank">doi:10.1016/j.marpol.2008.03.014</a></li>
 <li>Merrie, Andrew, and Per Olsson. "An innovation and agency perspective on the emergence and spread of Marine Spatial Planning." <i>Marine Policy</i> 44 (2014): 366-374. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13002315" target="_blank">doi:10.1016/j.marpol.2013.10.006</a></li>
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a></li>
 <li><a href="http://cartodb.com/" target="_blank"><b>CartoDB.com</b></a> and <a href="http://mapbox.com/" target="_blank"><b>Mapbox.com</b></a> - Free online tools for building professional web maps</li>
+THE REST HERE NEED URLS TO LINK
+<li><a>Cash DW, et al. (2003) Knowledge systems for sustainable development. Proc Natl Acad Sci 100(14):8086–8091.</a></li>
+<li><a>McKenzie E, et al. (2014) Understanding the use of ecosystem service knowledge in decision making: lessons from international experiences of spatial planning. Environ Plan C Gov Policy 32(2):320–340.</a></li>
+<li><a>Don’t Be Such a Scientist (Randy Olson)</a></li>
+<li><a>Escape from the Ivory Tower (Nancy Baron)</a></li>
 </ul>
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -202,9 +210,12 @@ Communicating and applying results in Belize was multi-faceted, including a form
 </ul> 
 <p></p><br><br><br>
 <h4>California</h4>
+LETS BE SURE TO CHECK WITH ERIC AND LISA W. ABOUT OTHER IDEAS FOR PRODUCTS TO PUT HERE.
 <p></p>
 <ul id="folio_scroller">
 <li><span>This one-page interim report is one example of how our partner, the Center for Ocean Solutions, communicated early findings to stakeholders in Sonoma County, California.</span><img alt="" src="img/communicate_ca_folio_1.png" /></a></li>
+<li>LINK TO SANTA CRUZ IRWM PLAN ADAPTATION CHAPTER THAT HAD OUR RESULTS WITHIN IT</li>
+<li>LINK TO LANGRIDGE ET AL. (Langridge, S.M., E.H. Hartge, R. Clark, K. Arkema, G. Verutes, E.E. Prahler, S. Stoner-Duncan, M.R. Caldwell, A. Guerry, M. Ruckelshaus, A. Abeles, C. Coburn, K. O'Connor. 2014. Key lessons for incorporating natural infrastructure into regional climate adaptation planning. Ocean and Coastal Management.</li>
 </ul> 
 <p></p>
 </body>
