--- a/data.html
+++ b/data.html
@@ -141,7 +141,9 @@ window.onload = function (evt) {
 <body>
 <h1>Step 2: Data (Compile Information)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-MSP typically relies on both spatial and non-spatial data characterizing the coastal and marine space. Data requirements may include biophysical and oceanographic information, such as elevation, maps of human activities and socio-economic characteristics in the coastal zone, and data on the distribution and quality of coastal-marine habitats. When valuation is a part of the assessment, economic data is also needed, which can include market prices, property values, and discount rates.
+MSP typically relies on both spatial and non-spatial information characterizing the coastal and marine space. An organized collection of information is useful for all types of participants involved in MSP.  Data allow you to visualize the locations of current environments and human activities and serve as a foundation for discussions of future plans.  Often, data also serve as inputs to predictive models and MSP decision-support tools (POSSIBLE TO LINK TO DST DEFINITION ON ANALYZE PAGE?).  Other times data are used to visually depict or quantify elements of scenarios (Scenario Step).  The uses for the data should be clearly identified before data are collected – often based on the goals established during the Scoping and Analyze Steps.
+Generally, useful data include biophysical and oceanographic information such as elevation and bathymetry, maps of human activities such as transportation routes or fishing grounds, the distribution of coastal and marine habitats, and socioeconomic data like those provided by official censuses.  When monetary valuation is a part of the assessment, additional data on market prices or property values may also be pertinent.
+
 <p></p>
 <img src="img/approach_Step2.png" usemap="#step2"><br>
 <map name="step2">
@@ -151,58 +153,51 @@ MSP typically relies on both spatial and non-spatial data characterizing the coa
   <area shape="circle" coords="632,92,55" href="synthesize.html" alt="Synthesize">
   <area shape="circle" coords="763,92,55" href="communicate.html" alt="Communicate">
 </map>
-<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2>
-<ul>
-<li>Gather coarse spatial information that can be refined and improved through iterative analysis and knowledge exchange</li>
-<li>Compile and curate a "working" database to use as inputs to MSP decision-support tools</li>
-<li>Develop a comprehensive MSP database to share with the community at the conclusion of the project</li>
-</ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Don’t spend too much time initially on this step</li>
+<li>Don’t spend too much time initially on this step. The data step can be a rabbit hole because you can collect and amass new data for forever.  Only collect the data you need to reach your management objectives. </li>
 <li>Use global or regional data sources to get a 'lay of the land' and identify data gaps/needs</li>
 <li>Show preliminary data to stakeholders; use expert feedback to refine information (see <a href="iterate.html"><b>Iterate</b></a> step)</li>
 <li>If funding allows, consider adding a dedicated GIS/data analyst to your team</li>
 </ul>
 <a name="databases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Global Databases</h2>
-We organize global MSP datasets into the following thematic categories. Click on the name to visit each website.
-<ol>
-<li><b><u>Biophysical</u></b> - Physiographic, oceanographic, climatological, and biological</li>
-<li><b><u>Cultural</u></b> - Geopolitical, human use activities and infrustructure, socio-economic</li>
-<li><b><u>Remotely-sensed</u></b> - Data aquired using earth observation technology (e.g., satellite imagery, LiDAR)</li>
-</ol>
-<li><a href="http://data.unep-wcmc.org/" target="_blank"><b>UNEP Ocean Data Viewer</b></a> (1,2) Data for the conservation of <b>marine and coastal biodiversity</b></li>
-<li><a href="http://www.naturalearthdata.com/" target="_blank"><b>Natural Earth</b></a> (1,2) A <b>cartographic dataset</b> available at 1:10m, 1:50m, and 1:110 million scales</li>
-<li><a href="http://marinecadastre.gov/" target="_blank"><b>NOAA Multipurpose Marine Cadaster</b></a> (1,2) Data for the <b>offshore energy and marine planning communities</b></li>
-<li><a href="https://data.nceas.ucsb.edu/" target="_blank"><b>NCEAS Data Repository</b></a> (1,2) Research datasets collected and collated as part of NCEAS funded activities</li>
-<li><a href="http://marinexplore.org/browse/" target="_blank"><b>MarineExplore.org</b></a> (1,2) The world's <b>ocean data</b> at your fingertips; access measurements and create datasets</li>
-<li><a href="http://www.wri.org/our-work/project/reefs-risk" target="_blank"><b>Reefs at Risk Database</b></a> (1) A global database of <b>coral reefs</b> and threats from a wide range of human activities</li>
-<li><a href="http://www.bluehabitats.org/" target="_blank"><b>Blue Habitats</b></a> (1) Home to the global <b>seafloor geomorphic features map</b></li>
-<li><a href="http://openfisheries.org/" target="_blank"><b>OpenFisheries.org</b></a> (1) A platform for aggregating <b>global fishery data</b></li>
-<li><a href="http://www.worldpop.org.uk/data/" target="_blank"><b>Worldpop</b></a> (2) High resolution, contemporary data on <b>human population</b> distributions</li>
-<li><a href="http://glovis.usgs.gov/" target="_blank"><b>USGS Global Visualization Viewer</b></a> (3) A global, searchable database of historical <b>Landsat imagery</b></li>
-<li><a href="http://modis.gsfc.nasa.gov/data/dataprod/" target="_blank"><b>MODIS</b></a> (1,3) Products from a variety of disciplines, including <b>oceanography, biology, and atmospheric science</b></li>
-<p></p>
-<i>Do you know of other global databases that can inform MSP?  <a href="mailto:gverutes@stanford.edu?Subject=Global%20MSP%20Database" target="_top">E-mail us</a> the details!</i>
+There are many useful data sources available online, including:
+<li><a href="http://data.unep-wcmc.org/" target="_blank"><b>UNEP Ocean Data Viewer</b></a>Data for the conservation of <b>marine and coastal biodiversity</b></li>
+<li><a href="http://www.naturalearthdata.com/" target="_blank"><b>Natural Earth</b></a>A <b>cartographic dataset</b> available at 1:10m, 1:50m, and 1:110 million scales</li>
+<li><a href="http://marinecadastre.gov/" target="_blank"><b>NOAA Multipurpose Marine Cadaster</b></a>Data for the <b>offshore energy and marine planning communities</b></li>
+<li><a href="https://data.nceas.ucsb.edu/" target="_blank"><b>NCEAS Data Repository</b></a>Research datasets collected and collated as part of NCEAS funded activities</li>
+<li><a href="http://marinexplore.org/browse/" target="_blank"><b>MarineExplore.org</b></a>The world's <b>ocean data</b> at your fingertips; access measurements and create datasets</li>
+<li><a href="http://www.wri.org/our-work/project/reefs-risk" target="_blank"><b>Reefs at Risk Database</b></a>A global database of <b>coral reefs</b> and threats from a wide range of human activities</li>
+<li><a href="http://www.bluehabitats.org/" target="_blank"><b>Blue Habitats</b></a>Home to the global <b>seafloor geomorphic features map</b></li>
+<li><a href="http://openfisheries.org/" target="_blank"><b>OpenFisheries.org</b></a>A platform for aggregating <b>global fishery data</b></li>
+<li><a href="http://www.worldpop.org.uk/data/" target="_blank"><b>Worldpop</b></a>High resolution, contemporary data on <b>human population</b> distributions</li>
+<li><a href="http://glovis.usgs.gov/" target="_blank"><b>USGS Global Visualization Viewer</b></a>A global, searchable database of historical <b>Landsat imagery</b></li>
+<li><a href="http://modis.gsfc.nasa.gov/data/dataprod/" target="_blank"><b>MODIS</b></a>Products from a variety of disciplines, including <b>oceanography, biology, and atmospheric science</b></li>
+<li><a href="http://www.openstreetmap.org/" target="_blank"><b>OpenStreetMap</b></a>Export points, lines, polygons, representing a wide range of cultural <a href="http://wiki.openstreetmap.org/wiki/Map_Features">features</a></li>
+<li>MORE EXAMPLES OF SOCIO-ECON DATA?<li>
+
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Regional Databases</h2>
 Hover over each marker to learn more about these regional MSP databases.  Click on the marker to visit each website.<br>
 <i>Do you know of other regional/local MSP databases?  <a href="mailto:gverutes@stanford.edu?Subject=Regional%20MSP%20Database" target="_top">E-mail us</a> the details!</i>
+<ul>
+<li>COASTAL HAZARDS DATABASE FOR CENTRAL AND SOUTHERN AMERICA SUPPORTED BY CEPAL AND GOVERNMENT OF SPAIN http://www.c3a.ihcantabria.com/</li>
+<li>US CENSUS BUREAU?</li>
+<li>ALSO LIST THE SOURCES THAT APPEAR ON THE MAP?</li>
 <p></p>
 <ul id="folio_scroller">
 <li><span>Regional MSP Databases</span><iframe width='600px' height='300px' frameBorder='0' src='reg_msp_data.html'></iframe></li>
 </ul>
 <p></p><br>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Helper Tools</h2>
+<img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;InVEST Helper Tools</h2>
 <img src="img/on_ramp.png"><br>
-Processing spatial and tabular data is a challenging but necessary step before it can be plugged into InVEST or other decision-support tools.  NatCap has created helper tools and documentation (or "on-ramps") to help InVEST users prepare and format inputs for analyzing ecosystem service outcomes:
+Spatial and tabular data usually require some amount of processing before they can be plugged into InVEST or other decision-support tools. This is a challenging but necessary step so NatCap has created helper tools and documentation to help InVEST users prepare and format inputs for analyzing ecosystem service outcomes: 
 <ol>
-<li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank"><b>InVEST 3.x Data Requirements</b></a> - A sortable spreadsheet listing the required and optional inputs for each InVEST model</li>
+<li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank"><b>InVEST 3.x Data Requirements</b></a> - A spreadsheet listing the required and optional inputs for each InVEST model</li>
 <li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
 <li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
 <li><a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> - A discussion thread where NatCap staff and members of the broader community share details about new helper tools</li>
@@ -210,14 +205,14 @@ Processing spatial and tabular data is a challenging but necessary step before i
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: Where can I find MSP data?</b><br>
-<i>A: We have compiled a list of global and regional MSP databases (see above).  Environmental NGOs and local government agencies often have data available upon request or through a data sharing agreenment.  Some partners and collaborators may also have a network of data sources.  When requesting data, be clear and transparent about how your team intends to use this information.</i><br>
+<b>Q: Where can I find data for MSP?</b><br>
+<i>A: We have compiled a select list of global and regional MSP databases (see above). Environmental NGOs and local government agencies often have data available upon request or through a data sharing agreement. Some partners and collaborators may also have a network of data sources. When requesting data, be clear and transparent about how your team intends to use the information.  Another good source is the peer-reviewed scientific literature.  Even if you don’t have data from your specific site to parameterize models, you may be able to find data from the larger region around your site in a published paper (e.g., supplemental text in Arkema et al. 2014).  Generally, data about the spatial distribution and intensity of human activities that reflect your current and possible future management scenarios (i.e., zones for MSP if relevant to your process) will come from local government agencies.  Maps of habitats and species from local or international NGOs and global databases.  Parameters and other input data for ecosystem service models generally come from scientific experts and their local data, the peer reviewed literature and global databases.</i><br>
 <p></p>
 <b>Q: How do I handle data gaps?</b><br>
-<i>A: Lack of data can present a serious challenge.  A GIS analyst may be able to compile different sources of information and piece them together as a continuous data set.  Also, keep in mind that stakeholders often respond well to qualitative outputs too.  Ultimately, it's important to be clear throughout the process as to where there is uncertainty or lack of confidence due to paucity of information.</i>
+<i>A: Lack of data can present a serious challenge. A GIS analyst may be able to compile different sources of information and piece them together as a continuous data set (e.g., seagrass data for the US in Arkema et al. 2013). Also, keep in mind that stakeholders often respond well to qualitative outputs too. Ultimately, it's important to be clear throughout the process as to where there is uncertainty or lack of confidence due to paucity of information.</i>
 <p></p>
 <b>Q: How much is <u>enough</u> data?</b><br>
-<i>A: Revisit the project objectives and methodologies outlined during the scoping process.  Start with just enough data to do preliminary analysis (e.g., run a selected tool).  It is often easier to add and refine data as you go rather than waiting for "final" data.</i>
+<i>A: Revisit the project objectives and methodologies outlined during the scoping process. Begin by collecting enough data to do preliminary analysis or to run the selected decision support tool. It is often easier and more pragmatic to add and refine data throughout the process rather than waiting for "final" data.</i>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -241,7 +236,7 @@ Use the expand [+] button to learn more about this data compilation step in the 
 Online data management was essential in Barbados.  Data management can be challenging when coordinating among a remote team based in different locations.  We used Google Drive to store and track data we already had, data we could readily access if needed, and data we hoped to acquire.  This online system helped our partners track project information, including data sources, spatial resolution, and map units.  Preliminary results from InVEST models identified additional data needs and demonstrated for partners how data would be used.
 <p></p>
 <h4>Mozambique</h4>
-Coming soon
+Coming soon - ASK JESS
 <p></p>
 <h4>New England</h4>
 Coming soon
